--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
-.App {
-  text-align: center;
+.fetchmovies{
+  width:70%;
+  height:100px;
+  background-color: white;
+  border-radius: 20px;
+  
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.fetchmovies button{
+  color: white;
+  background-color: rgb(52, 22, 84);
+  padding:10px;
+  width: 130px;
+  border-radius: 50px;
+  margin-top: 30px;
+  margin-left: 40%;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+.movies-body{
+  display:flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  margin-top: 10px;
+ }
+ body{
+  background-color: black;
+ }
+ .display-movies{
+  background-color: white;
+  width:70%;
+  height: auto;
+  margin-top: 20px;
+  border-radius: 20px;
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+ }
