--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,9 @@
   margin-top: 30px;
   margin-left: 40%;
 }
+.fetchmovies button:hover{
+  background-color: rgb(28, 28, 184);
+}
 .movies-body{
   display:flex;
   flex-direction: column;
@@ -29,5 +32,5 @@
   height: auto;
   margin-top: 20px;
   border-radius: 20px;
-
  }
+ 
