--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,6 @@
   height:100px;
   background-color: white;
   border-radius: 20px;
-  
 }
 .fetchmovies button{
   color: white;
@@ -12,7 +11,7 @@
   width: 130px;
   border-radius: 50px;
   margin-top: 30px;
-  margin-left: 40%;
+  margin-left: 205px;
 }
 .fetchmovies button:hover{
   background-color: rgb(28, 28, 184);
@@ -33,4 +32,27 @@
   margin-top: 20px;
   border-radius: 20px;
  }
- 
+
+ .loading-text{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+ }
+ .loading-text button{
+  color: white;
+  background-color: rgb(52, 22, 84);
+  padding:10px;
+  width: 120px;
+  margin: 10px;
+  margin-bottom: 10px;
+  border-radius: 50px;
+ }
+ .loading-text button:hover{
+  background-color: rgb(28, 28, 184);
+}
+.nofound{
+  margin-left:205px;
+}
+.error{
+   margin-left:140px;
+}
