--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   width: 130px;
   border-radius: 50px;
   margin-top: 30px;
-  margin-left: 205px;
+  margin-left: 45%;
 }
 .fetchmovies button:hover{
   background-color: rgb(28, 28, 184);
@@ -51,8 +51,8 @@
   background-color: rgb(28, 28, 184);
 }
 .nofound{
-  margin-left:205px;
+  margin-left:45%;
 }
 .error{
-   margin-left:140px;
+   margin-left:40%;
 }
